--- a/style.css
+++ b/style.css
@@ -15,6 +15,12 @@ body {
     background-color: white;
 }
 
+main {
+    height: 70vw;
+    padding: 2rem;
+    background: linear-gradient(black 10%, #808080 70%, #C0C0C0);
+}
+
 h2 {
     color: red;
 }
@@ -54,7 +60,7 @@ h2 {
     background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-    animation: animate-gradient 2s infinite;
+    animation: animate-gradient 2.5ws infinite;
 }
 
 @keyframes animate-gradient {
@@ -107,13 +113,18 @@ li {
     justify-content: center;
 }
 
+.footerAlign {
+    width: 100% ;
+}
+
 .container {
     position: fixed;
+    justify-content: center;
+    background-color: blue;
     display: flex;
     bottom: 0;
     color: white;
     align-items: baseline;
-    margin-left: 46%;
 }
 
 .carousel {
