--- a/style.css
+++ b/style.css
@@ -33,6 +33,8 @@ h2 {
     width: 100%;
     padding: 0px;
     margin: 0px;
+    border: 1px solid;
+    border-image: linear-gradient(190deg, yellow, orange, red, orange, yellow) 1;
 }
 
 .logoHead {
@@ -136,4 +138,18 @@ li {
     height: 100vh;
     object-fit: cover;
     object-position: bottom;
+}
+
+.tableCard {
+    display: flex;
+}
+
+.card {
+    width: 40vw;
+}
+
+.card-img {
+    height: 40vh;
+    object-fit: cover;
+    object-position: center;
 }
