--- a/style.css
+++ b/style.css
@@ -11,13 +11,11 @@
 body {
     margin: 0px;
     padding: 0px;
-    background-color: #303030;
-    background-color: white;
+    background-color: #252525;
 }
 
 main {
-    height: 70vw;
-    background: linear-gradient(black 10%, #808080 70%, #C0C0C0);
+    height: 100%;
 }
 
 h2 {
@@ -25,7 +23,7 @@ h2 {
 }
 
 
-.headContainer {
+.headContainer{
     display: flex;
     align-items: center;
     background-color: #151515;
@@ -48,6 +46,10 @@ h2 {
 
 }
 
+.logoHead02 {
+    color: red;
+}
+
 .headNavbar {
     display: flex;
     width: 90%;
@@ -61,7 +63,7 @@ h2 {
     background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-    animation: animate-gradient 2.5ws infinite;
+    animation: animate-gradient 2.5s infinite;
 }
 
 @keyframes animate-gradient {
@@ -141,15 +143,76 @@ li {
 }
 
 .tableCard {
+    height: 120%;
+    margin-top: 2rem;
+    margin-bottom: 4rem;
     display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: space-between;
 }
 
 .card {
-    width: 40vw;
+    width: 30vw;
+    height: 20vw;
+    margin-top: 2rem;
+    margin-left: 1rem;
+    margin-right: 1rem;
 }
 
 .card-img {
     height: 40vh;
     object-fit: cover;
     object-position: center;
+}
+
+/* About Page */
+
+.aboutSection {
+    background: #191919;
+}
+
+.aboutTitleSection {
+    margin-top: 10rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.aboutTitle {
+    color: red;
+    font-size: 10rem;
+    font-family: myFont;
+    -webkit-text-stroke: 2px white;
+    justify-content: center;
+}
+
+.aboutSubTitle {
+    color: orange;
+    font-family: myFont02;
+    font-size: 1rem;
+    margin-top: -1.5%;
+}
+
+.contentAbout {
+
+    color: white;
+    margin-top: 5rem;
+}
+
+.contentAbout h2 {
+    font-size: 5rem;
+    margin-left: 1rem;
+    color: white;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    -webkit-text-stroke: 1px black;
+}
+
+.aboutText {
+    background: #252525;
+    padding: 2rem;
+    font-size: 3rem;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    color: red;
+    -webkit-text-stroke : 1px #000000;
 }
